=======
HISTORY
=======

1.2.16 (unreleased)
-------------------

- Fixed ``plone.namedfile`` dependecy check
  [keul]


1.2.15 (2013-01-13)
-------------------

- Remove images in data URIs on save.
  Fixes https://dev.plone.org/ticket/13199
  [khink]

- Support passing a maxlength attribute to tinymce_wysiwyg_support.
  [davisagli]


1.2.14 (2012-11-14)
-------------------

- Escape double quote to so images preview keeps working when having quote
  in tilte
  [maartenkling]

- Declare dependency on zope.app.component.
  [maurits]


1.2.13 (2012-08-18)
-------------------

- Add a dependency on zope.app.content in setup.py.
  [maurits]


1.2.12 (2012-05-08)
-------------------

- Add a missing ``nocall`` to prevent accidental rendering of the
  object passed to the widget.
  [sunew]

- Fix accidental dependency on plone.namedfile.
  [thet]


1.2.11 (2012-04-18)
-------------------

- Fix original scale (dexterity-based images need 'my_image/@@images/image' 
  instead of just 'my_image')
  [pbauer]

- Allow upload of dexterity based images. This is aimed at
  plone.app.contentypes but should work with all dexterity bases-images.
  [pbauer] 

- Fixed AttributeError: ``NoneType`` object has no attribute
  ``physicalPathToURL`` when getRequest cannot get a request.  Use the
  REQUEST from the context in that case.
  [maurits]

- Determine mimetype correctly for plone.app.textfield RichText widgets with
  ignoreContext = True (such as on add forms).
  (Requires plone.app.textfield >= 1.1.1)
  [davisagli]

- Removed comma at the end of a dict in tiny_mce_init.js. This fixes javascript
  error on IE7. This was broken in 1.2.10.
  [vincentfretin]


1.2.10 (2012-01-29)
-------------------

- Fixed AttributeError: 'ATDocumentFieldsView' object has no attribute
  'absolute_url' when using inline editing.  Inline editing then still
  does not work though (checked on Plone 4.2 dev).
  [maurits]

- Fixed a few test failures in combination with five.pt.
  [maurits]
