@@ -165,7 +165,11 @@
             a.push("body");
             var p = e;
             while (!this._inArray(p.nodeName.toLowerCase(), a)) {
-                p = p.parentNode;
+                if (p.parentNode == null) {
+                    return false;
+                } else {
+                    p = p.parentNode;
+                }
             }
             if (p.nodeName.toLowerCase() == "body") {
                 return false;
